retrieveNA31/objects/Core_MAG_Questionnaire__c.object
<CustomObject>
    <description>Stores MAG questionnaire questions &amp; answers for an opportunity. One row per questionnaire, with the Q&apos;s &amp; A&apos;s stored in fields, rather than as separate rows, to simplify the logic to store &amp; retrieve the data. The questions may change over time (although very infrequently), so we are stamping the question as it was when the questionnaire was originally filled out.</description>
    <fields>
        <fullName>Core_A10__c</fullName>
        <label>Answer #10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_A11__c</fullName>
        <label>Answer #11</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_A12__c</fullName>
        <label>Answer #12</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_GEC_Comments_Response__c</fullName>
        <label>GEC Comments Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_GEC_Comments__c</fullName>
        <label>GEC Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Intro__c</fullName>
        <label>Intro</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Number_of_Questions__c</fullName>
        <label>Number of Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MAG Questionnaires</relationshipLabel>
        <relationshipName>MAG_Questionnaires</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_Outtro__c</fullName>
        <label>Outtro</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Q10_Textbox__c</fullName>
        <label>Q10 Textbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Q10__c</fullName>
        <label>Q10</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Q11_Textbox__c</fullName>
        <label>Q11 Textbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Q11__c</fullName>
        <label>Q11</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Q12_Textbox__c</fullName>
        <label>Q12 Textbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Q12__c</fullName>
        <label>Q12</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>MAG Questionnaire</label>
    <nameField>
        <displayFormat>MAG-{00000000}</displayFormat>
        <label>MAG Questionnaire Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MAG Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>